--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import jfxtras.styles.jmetro.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="be.renaud11232.ghostfinder.controller.MainWindowController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="container" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.renaud11232.ghostfinder.controller.MainWindowController">
+    <styleClass>
+        <JMetroStyleClass fx:constant="BACKGROUND" />
+    </styleClass>
 </AnchorPane>
